configs/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains: ["*"]
                      routes:
                        - match: 
                            prefix: "/apps"
                          route:
                            cluster: envspotting_apps
                            max_grpc_timeout: 2s
                        - match: 
                            prefix: "/users"
                          route:
                            cluster: envspotting_users
                            max_grpc_timeout: 2s
                        - match: 
                            prefix: "/gitlab"
                          route:
                            cluster: envspotting_gitlab
                            max_grpc_timeout: 2s                      
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: POST
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization,refresh-token,user-id,browser-fingerprint
                        max_age: "1728000"
                        expose_headers: grpc-status,grpc-message,authorization,refresh-token,user-id,browser-fingerprint
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
  clusters:
    - name: envspotting_apps
      connect_timeout: 1.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: envspotting_apps
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: envspotting_apps
                      port_value: 9090
    
    - name: envspotting_users
      connect_timeout: 1.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: envspotting_users
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: envspotting_users
                      port_value: 9091

    - name: envspotting_gitlab
      connect_timeout: 1.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: envspotting_gitlab
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: envspotting_gitlab
                      port_value: 7070
